fix(GUI): pagination label align (PR #2405 Fixes #2400)

--- a/src/renderer/assets/styles/components/allPublicationsPage.scss
+++ b/src/renderer/assets/styles/components/allPublicationsPage.scss
@@ -93,12 +93,18 @@
         }
 
         &_pagination {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 5px;
+
             &_title {
                 font-size: 14px;
-                margin: 0 0 5px 40px;
-                position: absolute;
-                top: -18px;
-                left: 12px;
+                // margin: 0 0 5px 40px;
+                // position: absolute;
+                // top: -18px;
+                // left: 12px;
             }
 
             &_container {
